--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -1,9 +1,3 @@
-.App {
-  text-align: center;
-  margin: "150px auto 0 auto";
-  width: "60%";
-}
-
 .App p {
   font-size: 18px;
 }
@@ -15,15 +9,16 @@
   right: 1;
   bottom: 0;
 }
-input[type="number"] {
-  padding: 10px;
-}
-button[type="submit"] {
-  padding: 10px;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button[type="submit"] {
+  padding: 5px;
+}
+.border {
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+}
+p {
+  padding: 0;
+  margin: 0;
 }
