--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -13,6 +13,9 @@
 button[type="submit"] {
   padding: 5px;
 }
+button {
+  border-radius: 5px;
+}
 .border {
   border: 1px solid #ccc;
   padding: 10px;
